# kosma-ocs-translator

./: README.md  kosma-ocs-translator.py  pyproject.toml
utils/: Makefile
